--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "deploy": "ng build --output-path docs --base-href /funkocollectionmanagement/",
+    "deploy": "ng build --base-href /funkocollectionmanagement/",
     "prebuild": "npm version patch && ng build && npm run deploy"
   },
   "private": true,
